added Certificate section

--- a/src/final/Nav.css
+++ b/src/final/Nav.css
@@ -85,7 +85,7 @@ body{
         gap:30px;
     }
 }
-@media screen and (max-width:900px) {
+/* @media screen and (max-width:900px) {
     #header_list
     {
         gap:20px;
@@ -105,8 +105,8 @@ body{
     {
         gap:30px;
     }
-}
-@media screen and (max-width:650px)
+} */
+@media screen and (max-width:850px)
 {
     .list_item,.resume_button{
         display: none;
